[gd_scene load_steps=8 format=3 uid="uid://b0rg3nflkrqle"]

[ext_resource type="Script" uid="uid://djulm3qson6fp" path="res://unit.gd" id="2_davkp"]
[ext_resource type="Texture2D" uid="uid://dr88b03phelgk" path="res://TowerAssets/iso_cube_right_#7FFF00_crystal.png" id="3_5wnup"]
[ext_resource type="Script" uid="uid://c0wfy435o75l3" path="res://enemy_visuals.gd" id="4_5wnup"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_btf8p"]
radius = 23.0
height = 62.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_davkp"]
load_path = "res://.godot/imported/iso_cube_green_ramp.png-9574b60b39e692422e3f84fa98642a23.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_1sk4h"]
atlas = SubResource("CompressedTexture2D_davkp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5wnup"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 1.0
emission_ring_inner_radius = 0.0
emission_ring_cone_angle = 90.0
gravity = Vector3(0, 98, 0)

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_mask = 0
script = ExtResource("2_davkp")

[node name="PhysicsHitbox" type="CollisionShape2D" parent="."]
position = Vector2(1, -37)
shape = SubResource("CapsuleShape2D_btf8p")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="InteractivityRadius" type="Area2D" parent="."]

[node name="MouseHitbox" type="CollisionShape2D" parent="InteractivityRadius"]
position = Vector2(-1, -37)
shape = SubResource("CapsuleShape2D_btf8p")

[node name="EnemyVisuals" type="Node2D" parent="."]
script = ExtResource("4_5wnup")

[node name="Sprite" type="Sprite2D" parent="EnemyVisuals"]
z_as_relative = false
y_sort_enabled = true
texture = ExtResource("3_5wnup")
offset = Vector2(0, -32)

[node name="SpawnParticles" type="GPUParticles2D" parent="EnemyVisuals"]
amount = 1
amount_ratio = 0.1
texture = SubResource("AtlasTexture_1sk4h")
lifetime = 0.93
process_material = SubResource("ParticleProcessMaterial_5wnup")

[node name="AmbientParticles" type="GPUParticles2D" parent="EnemyVisuals"]
amount = 1
amount_ratio = 0.1
texture = SubResource("AtlasTexture_1sk4h")
lifetime = 0.93
process_material = SubResource("ParticleProcessMaterial_5wnup")

[node name="MoveParticles" type="GPUParticles2D" parent="EnemyVisuals"]

[node name="DeathParticles" type="GPUParticles2D" parent="EnemyVisuals"]
